[tool.poetry]
name = "agent-searchdata-integration"
version = "0.0.1"
authors = [
    "Song Yuyang"
]
description = "A user new agent template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "agent_searchdata_integration" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
agent-searchdata-integration = "agent_searchdata_integration.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

